--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -17,3 +17,28 @@ Reack hooks
 1)usestate()
 
 
+Assignments
+○ Build a AppLayout
+○ Build a Header Component with Logo & Nav Items & Cart
+○ Build a Body Component
+○ Build RestaurantList Component
+○ Build RestaurantCard Component
+○ Use static data initially
+○ Make your card dynamic(pass in props)
+○ Props - passing arguments to a function - Use Destructuring & Spread
+operator
+○ Render your cards with dynamic data of restaurants
+○ Use Array.map to render all the restaurants
+○ Build a AppLayout
+○ Build a Header Component with Logo & Nav Items & Cart
+○ Build a Body Component
+○ Build RestaurantList Component
+○ Build RestaurantCard Component
+○ Use static data initially
+○ Make your card dynamic(pass in props)
+○ Props - passing arguments to a function - Use Destructuring & Spread
+operator
+○ Render your cards with dynamic data of restaurants
+○ Use Array.map to render all the restaurants
+
+
