--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -29,16 +29,12 @@ Assignments
 operator
 ○ Render your cards with dynamic data of restaurants
 ○ Use Array.map to render all the restaurants
-○ Build a AppLayout
-○ Build a Header Component with Logo & Nav Items & Cart
-○ Build a Body Component
-○ Build RestaurantList Component
-○ Build RestaurantCard Component
-○ Use static data initially
-○ Make your card dynamic(pass in props)
-○ Props - passing arguments to a function - Use Destructuring & Spread
-operator
-○ Render your cards with dynamic data of restaurants
-○ Use Array.map to render all the restaurants
+● Create a Folder Structure for your app
+● Make different files for each Components
+● Create a config file
+● Use all types of import and export
+● Create a Search Box in your App
+● Use useState to create a variable and bind it to the input box
+● Try to make your search bar work
 
 
